3-column blocks need to be left aligned in order for force the columns to align to the top of the div. Also solves bugs with buttons in those columns.

--- a/css/src/_work.scss
+++ b/css/src/_work.scss
@@ -74,11 +74,6 @@
 	article {
 		text-align: center;
 		padding-bottom: 20px;
-
-		@include respond-to( 768px ) {
-			float: none;
-			display: inline-block;
-		}
 	}
 	
 	.content {
@@ -86,7 +81,11 @@
 	}
 
 	.buttons {
+		height: 120px;
+
 		a {
+			margin: 5px 0;
+
 			@include button;
 
 			&:hover {
